# Empire

./: .clang-format  .gitignore  CMakeLists.txt  Empire.10x  README.md  gensln.bat  gensln.sh  gensln_ninja.bat
assets/: cube.frag  cube.vert  post.frag  post.vert  world.ldtk
include/Empire/: assets.h  emp_gl.h  hash.inl  level.h  math.inl  prototypes.h  text.h  types.h  util.h
raw/: Empire.html  base.aseprite  boss1_64.aseprite  boss2_64.aseprite  bullet.aseprite  bullet_8.aseprite  cave2_32.aseprite  cave_32.aseprite  chest1_32.aseprite  chest2_32.aseprite  enemy1.aseprite  enemy1_32.aseprite  enemy2_32.aseprite  enemy3_32.aseprite  env.aseprite  env2_32.aseprite  env3_16.aseprite  levels.ldtk  palette1.aseprite  player.aseprite  player_32.aseprite  test.aseprite  tilemap.aseprite  tilemapBreakable.aseprite
soy/SDL/src/render/direct3d/: SDL_render_d3d.c
soy/SDL_mixer/src/: version.rc
soy/glad/include/glad/: gl.h
soy/glad/src/: gl.c
src/: assets.c  emp_gl.c  entities.c  entities.h  external.c  fast_obj.c  level.c  lz4.c  main.c  stb_ds.c  stb_image.c  stb_truetype.c  text.c  ui.c  util.c  yyjson.c
src/codegen/: florence.c
src/shaders/: cube.frag
